--- a/06 - Dynamic Content/views/404.html
+++ b/06 - Dynamic Content/views/404.html
@@ -18,7 +18,9 @@
             </ul>
         </nav>
     </header>
-    <h1>Page Not Found!</h1>
+    <main>
+        <h1>Page not Found</h1>
+    </main>
 </body>
 
 </html>
