created routes,views and controllers fro new pages

--- a/08 - Enhancing/views/shop/checkout.ejs
+++ b/08 - Enhancing/views/shop/checkout.ejs
@@ -8,6 +8,6 @@
     <%- include('../includes/navigation.ejs') %>
 
     <main>
-
+        <h1>Checkout</h1>
     </main>
     <%- include('../includes/end.ejs') %>
