--- a/08 - Enhancing/views/shop/cart.ejs
+++ b/08 - Enhancing/views/shop/cart.ejs
@@ -8,6 +8,6 @@
     <%- include('../includes/navigation.ejs') %>
 
     <main>
-
+        <h1>Your Cart</h1>
     </main>
     <%- include('../includes/end.ejs') %>
