--- a/08 - Enhancing/views/shop/product-list.ejs
+++ b/08 - Enhancing/views/shop/product-list.ejs
@@ -17,11 +17,14 @@
                     <img src="<%= product.imageURL %>" alt="<%= product.title %>">
                 </div>
                 <div class="card__content">
-                    <h2 class="product__price"><%= product.price %></h2>
+                    <h2 class="product__price">€<%= product.price %></h2>
                     <p class="product__description"><%= product.description %></p>
                 </div>
                 <div class="card__actions">
-                    <button class="btn">Add to Cart</button>
+                    <form action="/add-to-cart" method="post">
+                        <button class="btn">Add to Cart</button>
+                    </form>
+                    
                 </div>
             </article>
             <% } %>
