--- a/09 - Dynamic Routes & Advanced Routes/views/admin/add-product.ejs
+++ b/09 - Dynamic Routes & Advanced Routes/views/admin/add-product.ejs
@@ -14,7 +14,7 @@
             </div>
             <div class="form-control">
                 <label for="imageUrl">Image URL</label>
-                <input type="text" name="imageUrl" id="imageUrl">
+                <input type="text" name="imageURL" id="imageURL">
             </div>
             <div class="form-control">
                 <label for="price">Price</label>
