--- a/09 - Dynamic Routes & Advanced Routes/views/shop/cart.ejs
+++ b/09 - Dynamic Routes & Advanced Routes/views/shop/cart.ejs
@@ -3,4 +3,7 @@
 
     <body>
         <%- include('../includes/navigation.ejs') %>
+        <main>
+            <h1>Your Cart</h1>
+        </main>
         <%- include('../includes/end.ejs') %>
