added editing product functionality

--- a/09 - Dynamic Routes & Advanced Routes/views/shop/product-detail.ejs
+++ b/09 - Dynamic Routes & Advanced Routes/views/shop/product-detail.ejs
@@ -11,7 +11,8 @@
                 <img src="<%= product.imageURL%>" alt="<% product.title %>">
             </div>
 
-            <h2>€<%= product.price %></h2>
+            <h2>€
+                <%= product.price %></h2>
             <p><%= product.description %></p>
             <%- include('../includes/add-to-cart.ejs') %>
         </main>
