--- a/09 - Dynamic Routes & Advanced Routes/views/admin/edit-product.ejs
+++ b/09 - Dynamic Routes & Advanced Routes/views/admin/edit-product.ejs
@@ -22,8 +22,13 @@
             </div>
             <div class="form-control">
                 <label for="description">Description</label>
-                <textarea name="description" id="description" rows="5"><% if (editing) {%><%=product.description%> <%}%></textarea>
+                <textarea name="description" id="description" rows="5"><%if(editing){%><%=product.description%><%}%></textarea>
             </div>
+            <% if (editing) { %>
+                <input type="hidden" name="productID" value="<%= product.id %>">
+                
+            <% } %>
+            
 
             <button class="btn" type="submit"><% if (editing) { %>Update Product<% } else { %>Add Product<%}%></button>
         </form>
