--- a/09 - Dynamic Routes & Advanced Routes/views/admin/products.ejs
+++ b/09 - Dynamic Routes & Advanced Routes/views/admin/products.ejs
@@ -19,7 +19,7 @@
                                     <img src="<%= product.imageURL %>" alt="<%= product.title %>">
                                 </div>
                                 <div class="card__content">
-                                    <h2 class="product__price">$
+                                    <h2 class="product__price">€
                                         <%= product.price %>
                                     </h2>
                                     <p class="product__description">
@@ -27,7 +27,7 @@
                                     </p>
                                 </div>
                                 <div class="card__actions">
-                                    <a href="/admin/edit-product" class="btn">Edit</a>
+                                    <a href="/admin/edit-product/<%= product.id%>?edit=true" class="btn">Edit</a>
                                     <form action="/admin/delete-product" method="POST">
                                         <button class="btn" type="submit">Delete</button>
                                     </form>
