created delete from cart functionality

--- a/09 - Dynamic Routes & Advanced Routes/views/shop/cart.ejs
+++ b/09 - Dynamic Routes & Advanced Routes/views/shop/cart.ejs
@@ -11,6 +11,10 @@
 
             <li>
                 <p><%= p.productData.title %> (<%= p.qty %>)</p>
+                <form action="/cart-delete-item" method="post">
+                    <input type="hidden" name="productID" value="<%= p.productData.id %>">
+                    <button type="submit" class="btn">Delete</button>
+                </form>
             </li>
 
             <% }) %>
