--- a/11 - Understanding Sequelize/views/shop/index.ejs
+++ b/11 - Understanding Sequelize/views/shop/index.ejs
@@ -17,12 +17,12 @@
                     <img src="<%= product.imageURL %>" alt="<%= product.title %>">
                 </div>
                 <div class="card__content">
-                    <h2 class="product__price">€
-                        <%= product.price %></h2>
+                    <h2 class="product__price">€<%= product.price %></h2>
                     <p class="product__description"><%= product.description %></p>
                 </div>
                 <div class="card__actions">
-                        <%- include('../includes/add-to-cart.ejs', {product: product}) %>
+                    <a href="/products/<%= product.id %>" class="btn">Details</a>
+                    <%- include('../includes/add-to-cart.ejs', {product: product}) %>
                 </div>
             </article>
             <% } %>
