--- a/11 - Understanding Sequelize/views/shop/product-detail.ejs
+++ b/11 - Understanding Sequelize/views/shop/product-detail.ejs
@@ -7,7 +7,7 @@
             <h1><%= product.title %></h1>
             <hr>
 
-            <div class="">
+            <div class="image">
                 <img src="<%= product.imageURL%>" alt="<% product.title %>">
             </div>
 
