--- a/11 - Understanding Sequelize/views/shop/cart.ejs
+++ b/11 - Understanding Sequelize/views/shop/cart.ejs
@@ -1,28 +1,25 @@
 <%- include('../includes/head.ejs') %>
-</head>
+    <link rel="stylesheet" href="/css/cart.css">
+    </head>
 
-<body>
-    <%- include('../includes/navigation.ejs') %>
-    <main>
-        <% if (products.length > 0) { %>
-        <h1>Your Cart</h1>
-        <ul>
-            <% products.forEach(p => { %>
-
-            <li>
-                <p><%= p.productData.title %> (<%= p.qty %>)</p>
-                <form action="/cart-delete-item" method="post">
-                    <input type="hidden" name="productID" value="<%= p.productData.id %>">
-                    <button type="submit" class="btn">Delete</button>
-                </form>
-            </li>
-
-            <% }) %>
-        </ul>
-
-        <h5>Cart Total: €<%= cartTotal %></h5>
-        <% } else { %>
-        <h1>No products in cart!</h1>
-        <% } %>
-    </main>
-    <%- include('../includes/end.ejs') %>
+    <body>
+        <%- include('../includes/navigation.ejs') %>
+        <main>
+            <% if (products.length > 0) { %>
+                <ul class="cart__item-list">
+                    <% products.forEach(p => { %>
+                        <li class="cart__item">
+                            <h1><%= p.title %></h1>
+                            <h2>Quantity: <%= p.cartItem.quantity %></h2>
+                            <form action="/cart-delete-item" method="POST">
+                                <input type="hidden" value="<%= p.id %>" name="productID">
+                                <button class="btn danger" type="submit">Delete</button>
+                            </form>
+                        </li>
+                    <% }) %>
+                </ul>
+            <% } else { %>
+                <h1>No Products in Cart!</h1>
+            <% } %>
+        </main>
+        <%- include('../includes/end.ejs') %>
