--- a/13 - Working with Mongoose/views/shop/product-detail.ejs
+++ b/13 - Working with Mongoose/views/shop/product-detail.ejs
@@ -8,7 +8,7 @@
             <hr>
 
             <div class="image">
-                <img src="<%= product.imageURL%>" alt="<% product.title %>">
+                <img src="<%= product.imageUrl%>" alt="<% product.title %>">
             </div>
 
             <h2>€
