--- a/13 - Working with Mongoose/views/admin/edit-product.ejs
+++ b/13 - Working with Mongoose/views/admin/edit-product.ejs
@@ -14,7 +14,7 @@
             </div>
             <div class="form-control">
                 <label for="imageUrl">Image URL</label>
-                <input type="text" name="imageURL" id="imageURL" value="<% if (editing) {%><%=product.imageURL%><%}%>">
+                <input type="text" name="imageURL" id="imageURL" value="<% if (editing) {%><%=product.imageUrl%><%}%>">
             </div>
             <div class="form-control">
                 <label for="price">Price</label>
