--- a/15 - Adding Authentication/views/auth/login.ejs
+++ b/15 - Adding Authentication/views/auth/login.ejs
@@ -6,7 +6,11 @@
 <body>
     <%- include('../includes/navigation.ejs') %>
 
+
     <main>
+        <% if (errorMessage) {%>
+        <div class="user-message user-message--error"><%= errorMessage %></div>
+        <%}%>
         <form class="login-form" action="/login" method="POST">
             <div class="form-control">
                 <label for="email">Email</label>
@@ -18,7 +22,7 @@
             </div>
             <input type="hidden" name="_csrf" value="<%= csrfToken %>">
 
-            <button class="btn" type="submit">Login</button>
+        <button class="btn" type="submit">Login</button>
         </form>
     </main>
     <%- include('../includes/end.ejs') %>
