--- a/15 - Adding Authentication/views/auth/signup.ejs
+++ b/15 - Adding Authentication/views/auth/signup.ejs
@@ -1,12 +1,15 @@
 <%- include('../includes/head.ejs') %>
-    <link rel="stylesheet" href="/css/forms.css">
-    <link rel="stylesheet" href="/css/auth.css">
+<link rel="stylesheet" href="/css/forms.css">
+<link rel="stylesheet" href="/css/auth.css">
 </head>
 
 <body>
-   <%- include('../includes/navigation.ejs') %>
+    <%- include('../includes/navigation.ejs') %>
 
     <main>
+        <% if (errorMessage) {%>
+        <div class="user-message user-message--error"><%= errorMessage %></div>
+        <%}%>
         <form class="login-form" action="/signup" method="POST">
             <div class="form-control">
                 <label for="email">E-Mail</label>
@@ -21,7 +24,7 @@
                 <input type="password" name="confirmPassword" id="confirmPassword">
             </div>
             <input type="hidden" name="_csrf" value="<%= csrfToken %>">
-            <button class="btn" type="submit">Signup</button>
+        <button class="btn" type="submit">Signup</button>
         </form>
     </main>
-<%- include('../includes/end.ejs') %>
+    <%- include('../includes/end.ejs') %>
