--- a/18 - Validation/views/admin/edit-product.ejs
+++ b/18 - Validation/views/admin/edit-product.ejs
@@ -14,22 +14,22 @@
             <input type="hidden" name="_csrf" value="<%= csrfToken %>">
         <div class="form-control">
             <label for="title">Title</label>
-            <input type="text" name="title" id="title" value="<% if (editing || hasError) {%><%=product.title%><%}%>">
+            <input class="<%= validationErrors.find(e => e.param === 'title') ? 'invalid' : ''  %>" type="text" name="title" id="title" value="<% if (editing || hasError) {%><%=product.title%><%}%>">
             </div>
             <div class="form-control">
                 <label for="imageUrl">Image URL</label>
-                <input type="text" name="imageURL" id="imageURL" value="<% if (editing || hasError) {%><%=product.imageUrl%><%}%>">
+                <input class="<%= validationErrors.find(e => e.param === 'imageURL') ? 'invalid' : ''  %>" type="text" name="imageURL" id="imageURL" value="<% if (editing || hasError) {%><%=product.imageUrl%><%}%>">
             </div>
             <div class="form-control">
                 <label for="price">Price</label>
-                <input type="number" name="price" id="price" step="0.01" value="<% if (editing || hasError) {%><%=product.price%><%}%>">
+                <input class="<%= validationErrors.find(e => e.param === 'price') ? 'invalid' : ''  %>" type="number" name="price" id="price" step="0.01" value="<% if (editing || hasError) {%><%=product.price%><%}%>">
             </div>
             <div class="form-control">
                 <label for="description">Description</label>
-                <textarea name="description" id="description" rows="5"><%if(editing || hasError){%><%=product.description%><%}%></textarea>
+                <textarea class="<%= validationErrors.find(e => e.param === 'description') ? 'invalid' : ''  %>" name="description" id="description" rows="5"><%if(editing || hasError){%><%=product.description%><%}%></textarea>
             </div>
             <% if (editing) { %>
-                <input type=" hidden" name="productID" value="<%= product._id %>">
+                <input type="hidden" name="productID" value="<%= product._id %>">
 
             <% } %>
 
