--- a/20 - File Up and Download/views/admin/edit-product.ejs
+++ b/20 - File Up and Download/views/admin/edit-product.ejs
@@ -22,10 +22,10 @@
                 <input type="file" name="image" id="image">
             </div>
             <!-- <div class="form-control">
-                    <label for="imageUrl">Image URL</label>
-                    <input class="<%= validationErrors.find(e => e.param === 'imageURL') ? 'invalid' : ''  %>"
-                type="text" name="imageURL" id="imageURL" value="<% if (editing || hasError) {%><%=product.imageUrl%><%}%>">
-                </div> -->
+                <label for="imageUrl">Image URL</label>
+                <input class="<%= validationErrors.find(e => e.param === 'imageURL') ? 'invalid' : ''  %>" type="text"
+                name="imageURL" id="imageURL" value="<% if (editing || hasError) {%><%=product.imageUrl%><%}%>"> -->
+            </div>
             <div class="form-control">
                 <label for="price">Price</label>
                 <input class="<%= validationErrors.find(e => e.param === 'price') ? 'invalid' : ''  %>" type="number"
