--- a/20 - File Up and Download/views/shop/orders.ejs
+++ b/20 - File Up and Download/views/shop/orders.ejs
@@ -14,7 +14,7 @@
                             <h1>Order - # <%= order._id %></h1>
                             <ul class="orders__products">
                                 <% order.products.forEach(p => { %>
-                                    <li class="orders__products-item"><%= p.product.title %> (<%= p.quantity %>) - </li>
+                                    <li class="orders__products-item"><%= p.product.title %> (<%= p.quantity %>) x €<%= p.product.price %> </li>
                                 <% }); %>
                                 <li class="orders__total">Total: €<%= order.total %>  <a target="_blank" href="/orders/<%= order._id %>" > Download Invoice</a> </li>
                             </ul>
