--- a/21 - Pagination/public/css/main.css
+++ b/21 - Pagination/public/css/main.css
@@ -254,7 +254,8 @@ form {
 }
 
 .pagination a:hover,
-.pagination a:active {
+.pagination a:active,
+.pagination a.active {
   background-color: #00695c;
   color: white;
 }
