--- a/23 - Payments/views/shop/cart.ejs
+++ b/23 - Payments/views/shop/cart.ejs
@@ -27,10 +27,11 @@
 
         <hr>
         <div class="centered">
-            <form action="/create-order" method="POST">
+            <!-- <form action="/create-order" method="POST">
                 <input type="hidden" name="_csrf" value="<%= csrfToken %>">
                 <button type="submit" class="btn">Order Now!</button>
-            </form>
+            </form> -->
+            <a href="/checkout" class="btn">Order Now!</a>
         </div>
 
         <% } else { %>
